feat/integracion keycloak inicial

--- a/qc-receptor-ordenes-service/src/main/resources/application.properties
+++ b/qc-receptor-ordenes-service/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/QCoordinacionDatabase?useSSL=f
 spring.datasource.username=root
 #spring.datasource.password=${SPRING_APPLICATION_MYSQL_PASSWORD}
 spring.datasource.password=toor
+
+#Keycloack Config
+spring.security.oauth2.resourceserver.jwt.issuer-uri = http://localhost:8181/realms/microservices-realm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri =http://localhost:8181/realms/microservices-realm/protocol/openid-connect/certs
+logging.level.org.keycloak = DEBUG
+jwt.auth.converter.principle-attribute= preferred_user_name
+jwt.auth.converter.resource-id = spring-client-api-rest
