--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,45 @@ services:
       # Where our data will be persisted
     volumes:
       - qcoordinacion-database:/var/lib/mysql
+
+  ### Postgres database for Keycloak
+  db-keycloak:
+    container_name: db-keycloak
+    image: postgres:15.2
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: db_keycloak
+      POSTGRES_USER: prueba
+      POSTGRES_PASSWORD: prueba123
+    ports:
+      - 5433:5433
+    expose:
+      - 5433
+    command: -p 5433
+
+  ###Keycloak
+  keycloak:
+    container_name: keycloak
+    image: quay.io/keycloak/keycloak:21.0.2
+    command: ["start-dev"]
+    ports:
+      - 8181:8181
+    expose:
+      - 8181
+    depends_on:
+      - db-keycloak
+    environment:
+      DB_VENDOR: POSTGRES
+      DB_ADDR: db_keycloak
+      DB_DATABASE: db_keycloak
+      DB_PORT: 5433
+      DB_USER: prueba
+      DB_PASSWORD : prueba123
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_HTTP_PORT: 8181
+
+
 # Names our volume
 volumes:
   qcoordinacion-database:
