--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,8 @@ services:
     expose:
       - 5433
     command: -p 5433
-
+    volumes:
+      - db-keycloak:/var/lib/postgresql/data
   ###Keycloak
   keycloak:
     container_name: keycloak
@@ -64,3 +65,4 @@ services:
 # Names our volume
 volumes:
   qcoordinacion-database:
+  db-keycloak:
