--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,22 +23,6 @@ services:
     volumes:
       - qcoordinacion-database:/var/lib/mysql
 
-  ### Postgres database for Keycloak
-  db-keycloak:
-    container_name: db-keycloak
-    image: postgres:15.2
-    restart: unless-stopped
-    environment:
-      POSTGRES_DB: db_keycloak
-      POSTGRES_USER: prueba
-      POSTGRES_PASSWORD: prueba123
-    ports:
-      - 5433:5433
-    expose:
-      - 5433
-    command: -p 5433
-    volumes:
-      - db-keycloak:/var/lib/postgresql/data
   ###Keycloak
   keycloak:
     container_name: keycloak
@@ -49,14 +33,14 @@ services:
     expose:
       - 8181
     depends_on:
-      - db-keycloak
+      - qcoordinacion-database
     environment:
-      DB_VENDOR: POSTGRES
+      DB_VENDOR: MYSQL
       DB_ADDR: db_keycloak
       DB_DATABASE: db_keycloak
       DB_PORT: 5433
-      DB_USER: prueba
-      DB_PASSWORD : prueba123
+      DB_USER: user
+      DB_PASSWORD : 1234
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
       KC_HTTP_PORT: 8181
@@ -65,4 +49,3 @@ services:
 # Names our volume
 volumes:
   qcoordinacion-database:
-  db-keycloak:
