--- a/qc-receptor-ordenes-service/src/main/resources/application.properties
+++ b/qc-receptor-ordenes-service/src/main/resources/application.properties
@@ -2,12 +2,10 @@ spring.application.name=qc-receptor-ordenes-service
 server.port=8080
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.datasource.url=jdbc:mysql://localhost:3306/QCoordinacionDatabase?useSSL=false
-#spring.datasource.username=${SPRING_APPLICATION_MYSQL_USER}
-spring.datasource.username=root
-#spring.datasource.password=${SPRING_APPLICATION_MYSQL_PASSWORD}
-spring.datasource.password=toor
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5433/qcoordinacion
+spring.datasource.username=${SPRING_APPLICATION_POSTGRES_USER}
+spring.datasource.password=${SPRING_APPLICATION_POSTGRES_PASSWORD}
 
 #Keycloack Config
 spring.security.oauth2.resourceserver.jwt.issuer-uri = http://localhost:8181/realms/microservices-realm
