--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,25 @@
 services:
-  qcoordinacion-database:
-    container_name: qc-database
-    image: mysql:8.0.3
-    restart: always
+  qcoordinaciondb:
+    container_name: qcoordinaciondb
+    image: postgres:16
+    restart: unless-stopped
     env_file:
       - .env
     environment:
-      MYSQL_DATABASE: 'QCoordinacionDatabase'
+      POSTGRES_DB: qcoordinacion
       # So you don't have to use root, but you can if you like
-      MYSQL_USER: ${SPRING_APPLICATION_MYSQL_USER}
+      POSTGRES_USER: ${SPRING_APPLICATION_POSTGRES_USER}
       # You can use whatever password you like
-      MYSQL_PASSWORD: ${SPRING_APPLICATION_MYSQL_PASSWORD}
-      # Password for root access
-      MYSQL_ROOT_PASSWORD: ${SPRING_APPLICATION_MYSQL_ROOT_PASSWORD}
+      POSTGRES_PASSWORD: ${SPRING_APPLICATION_POSTGRES_PASSWORD}
     ports:
       # <Port exposed> : <MySQL Port running inside container>
-      - '3306:3306'
+      - '5433:5432'
     expose:
       # Opens port 3306 on the container
-      - '3306'
+      - '5433'
       # Where our data will be persisted
     volumes:
-      - qcoordinacion-database:/var/lib/mysql
+      - qcoordinaciondb:/var/lib/postgresql/data
 
   ###Keycloak
   keycloak:
@@ -48,4 +46,4 @@ services:
 
 # Names our volume
 volumes:
-  qcoordinacion-database:
+  qcoordinaciondb:
