--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,28 +21,29 @@ services:
     volumes:
       - qcoordinaciondb:/var/lib/postgresql/data
 
-  ###Keycloak
   keycloak:
-    container_name: keycloak
-    image: quay.io/keycloak/keycloak:21.0.2
-    command: ["start-dev"]
+    image: bitnami/keycloak:22.0.1
+    container_name: keycloak-service
+    restart: unless-stopped
+    env_file:
+      - .env
+    environment:
+      KEYCLOAK_DATABASE_VENDOR: postgresql
+      KEYCLOAK_DATABASE_HOST: ${SPRING_APPLICATION_KC_POSTGRES_HOST}
+      KEYCLOAK_DATABASE_PORT: ${SPRING_APPLICATION_KC_POSTGRES_PORT}
+      KEYCLOAK_DATABASE_NAME: ${SPRING_APPLICATION_KC_POSTGRES_DB}
+      KEYCLOAK_DATABASE_USER: ${SPRING_APPLICATION_KC_POSTGRES_USER}
+      KEYCLOAK_DATABASE_PASSWORD: ${SPRING_APPLICATION_KC_POSTGRES_PASSWORD}
+      KEYCLOAK_DATABASE_SCHEMA: public
+      KEYCLOAK_ADMIN_USER: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+      KEYCLOAK_HTTP_PORT: 8181
+      KC_HTTP_PORT: 8181
+
     ports:
       - 8181:8181
     expose:
       - 8181
-    depends_on:
-      - qcoordinacion-database
-    environment:
-      DB_VENDOR: MYSQL
-      DB_ADDR: db_keycloak
-      DB_DATABASE: db_keycloak
-      DB_PORT: 5433
-      DB_USER: user
-      DB_PASSWORD : 1234
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
-      KC_HTTP_PORT: 8181
-
 
 # Names our volume
 volumes:
