--- a/qc-receptor-ordenes-service/src/main/resources/application.properties
+++ b/qc-receptor-ordenes-service/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5433/qcoordinacion
 
 #Keycloack Config
-spring.security.oauth2.resourceserver.jwt.issuer-uri = http://localhost:8181/realms/microservices-realm
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri =http://localhost:8181/realms/microservices-realm/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.issuer-uri = http://localhost:8181/realms/QCoordinacion
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri =http://localhost:8181/realms/QCoordinacion/protocol/openid-connect/certs
 logging.level.org.keycloak = DEBUG
 jwt.auth.converter.principle-attribute= preferred_user_name
-jwt.auth.converter.resource-id = spring-client-api-rest
+jwt.auth.converter.resource-id = qcoordinacionservices2
