--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 
 	<modules>
 		<module>qc-receptor-ordenes-service</module>
+		<module>qcoordinacion-fhir-service</module>
 	</modules>
 
 	<dependencies>
