--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
+# .env files
+.env
+
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-**/.env
+
 ### STS ###
 .apt_generated
 .classpath
