--- a/qcoordinacion-fhir-service/pom.xml
+++ b/qcoordinacion-fhir-service/pom.xml
@@ -43,6 +43,30 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>ca.uhn.hapi.fhir</groupId>
+			<artifactId>hapi-fhir-server</artifactId>
+			<version>6.6.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ca.uhn.hapi.fhir</groupId>
+			<artifactId>hapi-fhir-client</artifactId>
+			<version>6.6.0</version>  <!-- Use the latest version suitable for your needs -->
+		</dependency>
+		<dependency>
+			<groupId>ca.uhn.hapi.fhir</groupId>
+			<artifactId>hapi-fhir-base</artifactId>
+			<version>6.6.0</version>  <!-- Use the latest version suitable for your needs -->
+		</dependency>
+		<dependency>
+			<groupId>ca.uhn.hapi.fhir</groupId>
+			<artifactId>hapi-fhir-structures-r5</artifactId>
+			<version>6.6.0</version> <!-- Make sure to use the correct and latest version -->
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
