--- a/qcoordinacion-fhir-service/pom.xml
+++ b/qcoordinacion-fhir-service/pom.xml
@@ -23,6 +23,15 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>5.3.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
@@ -70,10 +79,6 @@
 			<artifactId>json</artifactId>
 			<version>20240303</version>
 		</dependency>
-
-
-
-
 	</dependencies>
 
 	<build>
