--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 		<module>qcoordinacion-fhir-service</module>
 		<module>qc-algoritmo</module>
 		<module>qcoordinacion-services-api-gateway</module>
-		<module>qc-service-registry</module>}
+		<module>qc-service-registry</module>
 	</modules>
 
 	<dependencies>
