--- a/qcoordinacion-services-api-gateway/src/main/resources/application.yml
+++ b/qcoordinacion-services-api-gateway/src/main/resources/application.yml
@@ -4,3 +4,14 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
     registerWithEureka: true
     fetchRegistry: true
+
+spring:
+  cloud:
+    gateway:
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: "http://localhost:3000,http://otro-origen-permitido.com"
+            allowedMethods: "GET,POST,PUT,DELETE"
+            allowedHeaders: "*"
+            allowCredentials: true
