--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,10 @@
 
 	<modules>
 		<module>qc-receptor-ordenes-service</module>
-		<module>qcoordinacion-fhir-service</module>
+		<module>qc-fhir-service</module>
 		<module>qc-algoritmo</module>
-		<module>qcoordinacion-services-api-gateway</module>
-		<module>qc-service-registry</module>
+		<module>qc-api-gateway-service</module>
+		<module>qc-service-disovery</module>
 	</modules>
 
 	<dependencies>
