--- a/qc-receptor-ordenes-service/pom.xml
+++ b/qc-receptor-ordenes-service/pom.xml
@@ -96,7 +96,11 @@
 			<artifactId>spring-beans</artifactId>
 			<version>6.1.5</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-commons</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
