--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   qcoordinaciondb:
     container_name: qcoordinaciondb
@@ -7,17 +9,10 @@ services:
       - .env
     environment:
       POSTGRES_DB: qcoordinacion
-      # So you don't have to use root, but you can if you like
       POSTGRES_USER: ${SPRING_APPLICATION_POSTGRES_USER}
-      # You can use whatever password you like
       POSTGRES_PASSWORD: ${SPRING_APPLICATION_POSTGRES_PASSWORD}
     ports:
-      # <Port exposed> : <MySQL Port running inside container>
       - '5433:5432'
-    expose:
-      # Opens port 3306 on the container
-      - '5433'
-      # Where our data will be persisted
     volumes:
       - qcoordinaciondb:/var/lib/postgresql/data
 
@@ -39,12 +34,53 @@ services:
       KEYCLOAK_ADMIN_PASSWORD: admin
       KEYCLOAK_HTTP_PORT: 8181
       KC_HTTP_PORT: 8181
-
     ports:
       - 8181:8181
-    expose:
-      - 8181
 
-# Names our volume
+  rabbitmq:
+    image: rabbitmq:3.9.11-management-alpine
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+
+  middleware-service:
+    build: ./qc-message-broker-service
+    container_name: middleware-service
+    depends_on:
+      - rabbitmq
+    environment:
+      SPRING_RABBITMQ_HOST: rabbitmq
+
+  api-gateway:
+    image: your-api-gateway-image
+    container_name: api-gateway
+    depends_on:
+      - rabbitmq
+      - middleware-service
+    environment:
+      SPRING_RABBITMQ_HOST: rabbitmq
+
+  fhir-server:
+    image: your-fhir-server-image
+    container_name: fhir-server
+    depends_on:
+      - rabbitmq
+      - middleware-service
+    environment:
+      SPRING_RABBITMQ_HOST: rabbitmq
+
+  worker-service:
+    image: your-worker-service-image
+    container_name: worker-service
+    depends_on:
+      - rabbitmq
+      - middleware-service
+    environment:
+      SPRING_RABBITMQ_HOST: rabbitmq
+
 volumes:
   qcoordinaciondb:
