--- a/qc-fhir-service/src/main/resources/application.yml
+++ b/qc-fhir-service/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 spring:
   application:
     name: qc-fhir-service
+  rabbitmq:
+      host: localhost
+      port: 5672
+      username: guest
+      password: guest
+
 eureka:
   client:
     serviceUrl:
