--- a/qc-api-gateway-service/pom.xml
+++ b/qc-api-gateway-service/pom.xml
@@ -57,6 +57,11 @@
 			<artifactId>httpclient5</artifactId>
 			<version>5.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 	</dependencies>
 
 
