--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,28 @@
+version: '3'
+
 services:
-  qcoordinaciondb:
-    container_name: qcoordinaciondb
-    image: postgres:16
-    restart: unless-stopped
-    env_file:
-      - .env
+  rabbitmq:
+    image: rabbitmq:3-management
+    hostname: rabbitmq
     environment:
-      POSTGRES_DB: qcoordinacion
-      # So you don't have to use root, but you can if you like
-      POSTGRES_USER: ${SPRING_APPLICATION_POSTGRES_USER}
-      # You can use whatever password you like
-      POSTGRES_PASSWORD: ${SPRING_APPLICATION_POSTGRES_PASSWORD}
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
     ports:
-      # <Port exposed> : <MySQL Port running inside container>
-      - '5433:5432'
-    expose:
-      # Opens port 3306 on the container
-      - '5433'
-      # Where our data will be persisted
-    volumes:
-      - qcoordinaciondb:/var/lib/postgresql/data
+      - "5672:5672"  # Exponer RabbitMQ al host
+      - "15672:15672"  # Exponer la interfaz de gestión al host
+
+  myapp:
+    build: .
+    environment:
+      SPRING_RABBITMQ_HOST: rabbitmq  # Nombre del servicio RabbitMQ
+      SPRING_RABBITMQ_PORT: 5672
+      SPRING_RABBITMQ_USERNAME: guest
+      SPRING_RABBITMQ_PASSWORD: guest
+    depends_on:
+      - rabbitmq
+    ports:
+      - "2929:8080"
+
 
   keycloak:
     image: bitnami/keycloak:22.0.1
